# syrok

./: CMakeLists.txt  LICENSE
include/: syrok.h
src/: error.c  error.h  syrok.c
syrokcli/: CMakeLists.txt  main.c
